--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     <main id="main">
       <section class="parrafo-titulo">
         <section class="titulo-bienvenida">
-        <div class="container_info_comercio">
           <h2 class="titulo-bienvenida">¡Bienvenidos!</h2>
-      </section>
+        </section>
         <section class="container_info_comercio_parrafo">
-        <p class="container_info_comercio_parrafo">Somos Cocoon Cosas Divertidas, un comercio familiar de mas de 30 años siempre al servicio de la gente.
+          <div class="container_info_comercio">
+            <p class="container_info_comercio_parrafo">Somos Cocoon Cosas Divertidas, un comercio familiar de mas de 30 años siempre al servicio de la gente.
 
         Oriundos de Los Cardales, nos hace muy felices el poder brindar la mejor calidad y atención. 
         
         ¡Gracias por elegirnos!</p>
-        </div>
+          </div>
         </section>
       </section>
     </main>
@@ -90,7 +90,7 @@
         </div>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
   <!--Scripts Bootstrap-->
