--- a/pages/productos.html
+++ b/pages/productos.html
@@ -95,7 +95,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
 
@@ -103,7 +104,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
 
@@ -111,7 +113,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
 
@@ -119,7 +122,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
 
@@ -127,7 +131,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
 
@@ -135,7 +140,8 @@
         <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
         <div class="texto-card-jueguete">
           <h5 class="titulo-card">Lego IronMan</h5>
-          <button id="botonComprar">Agregar al Carrito</button>
+          <p class="precioItem">$15000 c/u</p>
+          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
         </div>
       </div>
       
@@ -167,7 +173,7 @@
 
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../main.js"></script>
 
   </body>
