--- a/pages/productos.html
+++ b/pages/productos.html
@@ -19,6 +19,7 @@
       <nav>
         <div class="logo">
           <img class="logo_IMG" src="../images/Logo-COCOON.png" alt="logo-cocoon-chico">
+          <h1 class="ver-carrito" id="ver-carrito">🛒</h1>
         </div>
 
         <!-- Links Nav Bar -->
@@ -90,62 +91,32 @@
 
     <!-- Contenido Productos -->
 
-    <section class="itemsEnVenta">
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
 
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
 
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
+    <div id="articulosContainer" class="articulos-container"></div>
 
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
 
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
 
-      <div class="cardJugueteria" style="width: 18rem;">
-        <img src="../images/lego-ironman.jpg" class="img-card-juguete" alt="lego-ironman">
-        <div class="texto-card-jueguete">
-          <h5 class="titulo-card">Lego IronMan</h5>
-          <p class="precioItem">$15000 c/u</p>
-          <button class="btnComprar" data-id="${prod.id}">Agregar al Carrito</button>
-        </div>
-      </div>
-      
-    </section>
+
+<!-- Modal Content-->
+
+<div id="modal-container" class "modal-container"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
